# drf-auth

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
blogapi_permissions_project/: asgi.py  settings.py  urls.py  wsgi.py
posts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
